[project]
name = "kninja"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ninja-syntax>=1.7.2",
    "numpy>=2.3.2",
]

[project.scripts]
kninja = "kninja:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "kninja.py",
  "mmh2.py",
  "ninja_internal.py"
]
